created a home page + twmplate for a project

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,10 @@
 :root {
 	--primary-white: #fff;
 	--primary-orange: #f9ab00;
-	--primary-dark: rgba(255, 255, 255, 0);
+	--primary-dark: #000;
+	--prmary-invisable: rgba(255, 255, 255, 0);
 	--active-border-top: 0.1875rem solid var(--primary-orange);
+	--primary-purple: #7a00ff;
 }
 
 * {
@@ -95,3 +97,30 @@ h6 {
 	font-size: inherit;
 	font-weight: 400;
 }
+/*.appWrapper {
+	display: grid;
+	grid-template-areas: "h" "c";
+	grid-template-rows: 10vh 90vh;
+}
+.navbar_menu {
+	display: grid;
+	grid-area: h;
+}
+.wrapper__content {
+	display: grid;
+	grid-area: c;
+}*/
+
+.tsparticles-canvas-el {
+	position: absolute;
+	height: 100vh;
+	width: 100vw;
+	z-index: 1;
+}
+
+@media (max-width: 650px) {
+	.particles {
+		display: none;
+	}
+}
+
