--- a/src/components/Preloader/Preloader.module.css
+++ b/src/components/Preloader/Preloader.module.css
@@ -1,6 +1,13 @@
+.preloaderWrapper {
+	position: relative;
+	height: 100vh;
+	width: 100vw;
+}
+
 .preloader {
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 50vh;
+	right: 50vw;
+	text-align: center;
 	width: 7em;
 }
