--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,13 +1,18 @@
 @import '../../App.css';
 
 .navBar {
-	background-color: #8e6868;
-	position: sticky;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100vw;
+	height: 10vh;
+	background-color: #7f7f7f;
 	z-index: 2;
 }
-
 .logo {
-	width: 6rem;
+	margin-top: .6em;
+	width: 3.5em;
 }
 
 .hamMenu {
