--- a/src/components/aboutme/AboutMe.module.css
+++ b/src/components/aboutme/AboutMe.module.css
@@ -4,8 +4,6 @@
 .wrapper {
 	position: relative;
 	height: 90vh;
-	margin-top: 10vh;
-	background-size: cover;
 }
 
 .wrapper::before {
@@ -17,7 +15,7 @@
 	left: 0;
 	background: url('../../utils/imgs/bg_imgs/about_me_page_bg.jpg') no-repeat center;
 	background-size: cover;
-	opacity: .8;
+	opacity: .6;
 }
 
 .mainContent {
@@ -32,7 +30,9 @@
 }
 
 .informationBlock {
+	display: -ms-grid;
 	display: grid;
+	-ms-grid-columns: 1fr 6em 1fr;
 	grid-template-columns: repeat(2, 1fr);
 	grid-gap: 6em;
 }
@@ -42,8 +42,6 @@
 	font-weight: bold;
 }
 
-.smallInfo, .profSkills, .softSkills, .languages:hover {
-}
 .profSkills, .languages {
 	text-align: right;
 }
@@ -67,7 +65,7 @@
 
 .title {
 	font-size: calc(14px + (30 - 15) * ((100vw - 320px)/(1200 - 320)));
-	margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px)/(1600 - 320)));
+	/*margin-bottom: calc(10px + (20 - 10) * ((100vw - 320px)/(1600 - 320)));*/
 	border-bottom: 1px solid var(--primary-dark);
 }
 .subTitle {
@@ -82,16 +80,11 @@
 	}
 	.smallInfo, .profSkills, .softSkills, .languages {
 		border: none;
+		font-size: 1.2rem;
+		line-height: 130%;
 	}
-	.wrapper {
-		background: url('../../utils/imgs/bg_imgs/about_me_page_bg.jpg') no-repeat top;
-	}
-	.wrapper::before {
-		opacity: .1;
+	.subTitle {
+		color: var(--primary-dark);
 	}
 }
-
-/*.mainContent > div > section, h1 {
-	padding-top: calc(20px + (50 - 20) * ((100vw - 320px)/(1600 - 320)));
-}*/
 
